--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-    "name": "balanc3-test-app",
-    "version": "1.0.0",
-    "scripts": {
-      "client": "cd client && yarn start",
-      "server": "nodemon server.js",
-      "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
-      "start": "node server.js",
-      "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
-    },
-    "dependencies": {
-      "express": "^4.16.2"
-    },
-    "devDependencies": {
-      "concurrently": "^3.5.0"
-    }
+  "name": "balanc3-test-app",
+  "version": "1.0.0",
+  "scripts": {
+    "client": "cd client && yarn start",
+    "server": "nodemon server.js",
+    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
+    "start": "node server.js",
+    "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
+  },
+  "dependencies": {
+    "dotenv": "^6.0.0",
+    "express": "^4.16.2",
+    "mongoose": "^5.2.13"
+  },
+  "devDependencies": {
+    "concurrently": "^3.5.0"
   }
+}
