--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "body-parser": "^1.18.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.2",
-    "mongoose": "^5.2.13"
+    "isomorphic-fetch": "^2.2.1",
+    "mongoose": "^5.2.13",
+    "mongoose-unique-validator": "^2.0.1",
+    "query-string": "^6.1.0",
+    "web3": "^1.0.0-beta.36"
   },
   "devDependencies": {
     "concurrently": "^3.5.0"
